--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_ui_version = '1.1.0'
+        accompanist_version = '0.23.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
