--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@ buildscript {
     ext {
         compose_ui_version = '1.1.0'
         accompanist_version = '0.23.0'
+        apollo_version = '3.1.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.apollographql.apollo3' version "$apollo_version" apply false
 }
