--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,15 @@ buildscript {
         compose_ui_version = '1.1.0'
         accompanist_version = '0.23.0'
         apollo_version = '3.1.0'
+        room_version = '2.4.1'
+        hilt_version = '2.41'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    dependencies {
+        classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
+    }
+}
+
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
