--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation "androidx.hilt:hilt-navigation-compose:$hilt_compose_navigation_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     implementation 'androidx.paging:paging-compose:1.0.0-alpha14'
