--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         room_version = '2.4.1'
         hilt_version = '2.41'
         hilt_compose_navigation_version = '1.0.0'
+        landscapist_version = '1.4.8'
     }
     dependencies {
         classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
