--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext {
-        compose_ui_version = '1.1.0'
+        agp_version = '7.1.2'
+        kotlin_version = '1.6.10'
+        compose_ui_version = '1.1.1'
         accompanist_version = '0.23.0'
         apollo_version = '3.1.0'
         room_version = '2.4.1'
@@ -15,9 +17,9 @@ buildscript {
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.1.2' apply false
-    id 'com.android.library' version '7.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.android.application' version "$agp_version" apply false
+    id 'com.android.library' version "$agp_version" apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
     id 'com.apollographql.apollo3' version "$apollo_version" apply false
 }
 
