--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.0-rc02'
+        kotlinCompilerExtensionVersion "$compose_ui_version"
     }
     packagingOptions {
         resources {
