--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,12 +69,14 @@ dependencies {
     implementation 'androidx.compose.material:material'
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.ui:ui-util'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation "com.apollographql.apollo3:apollo-runtime:$apollo_version"
 
