--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,15 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+//import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
-buildscript {
-    ext {
-        agp_version = '7.4.0'
-        kotlin_version = '1.7.20'
-        accompanist_version = '0.28.0'
-        apollo_version = '3.7.1'
-        room_version = '2.4.3'
-        hilt_version = '2.44.2'
-        hilt_compose_navigation_version = '1.0.0'
-        landscapist_version = '2.1.0'
-    }
-    dependencies {
-        classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
-    }
-}
-
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version "$agp_version" apply false
-    id 'com.android.library' version "$agp_version" apply false
-    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
-    id 'com.apollographql.apollo3' version "$apollo_version" apply false
-}
-
-subprojects {
-    tasks.withType(KotlinCompile).configureEach {
-        kotlinOptions {
-            // Treat all Kotlin warnings as errors (disabled by default)
-            allWarningsAsErrors = project.hasProperty("warningsAsErrors") ? project.warningsAsErrors : false
-
-            jvmTarget = "1.8"
-
-            // Use experimental APIs
-            freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
-        }
-    }
-}
+//subprojects {
+//    tasks.withType(KotlinCompile).configureEach {
+//        kotlinOptions {
+//            // Treat all Kotlin warnings as errors (disabled by default)
+//            allWarningsAsErrors = project.hasProperty("warningsAsErrors") ? project.warningsAsErrors : false
+//
+//            jvmTarget = "1.8"
+//
+//            // Use experimental APIs
+//            freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
+//        }
+//    }
+//}
