Add Material3 dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,8 @@ dependencies {
     implementation(libs.activity.compose)
     implementation(platform(libs.androidx.compose.bom))
     androidTestImplementation(platform(libs.androidx.compose.bom))
-    implementation(libs.androidx.compose.material)
+    implementation(libs.androidx.compose.material2)
+    implementation(libs.androidx.compose.material3)
     implementation(libs.androidx.compose.ui)
     debugImplementation(libs.androidx.compose.ui.test.manifest)
     androidTestImplementation(libs.androidx.compose.ui.test.junit4)
