Migrate Room Kapt to Ksp

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     alias(libs.plugins.androidApplication)
     alias(libs.plugins.kotlinAndroid)
-    alias(libs.plugins.kotlinKapt)
+    alias(libs.plugins.kapt)
+    alias(libs.plugins.ksp)
     alias(libs.plugins.apollo)
     alias(libs.plugins.daggerHiltAndroidGradle)
 }
@@ -22,10 +23,8 @@ android {
             useSupportLibrary true
         }
 
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
-            }
+        ksp {
+            arg("room.schemaLocation", "$projectDir/schemas".toString())
         }
     }
 
@@ -80,7 +79,7 @@ dependencies {
     implementation(libs.bundles.accompanist)
 
     // Room
-    kapt(libs.room.compiler)
+    ksp(libs.room.compiler)
     implementation(libs.room.ktx)
     implementation(libs.room.runtime)
 
