--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.debug
         }
+        benchmark {
+            initWith release
+            matchingFallbacks = ['release']
+            debuggable false
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -101,4 +106,7 @@ dependencies {
 
     // Landscapist
     implementation(libs.landscapist.coil)
+
+    // Benchmark
+    implementation(libs.androidx.profile.installer)
 }
