--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    alias(libs.plugins.androidApplication)
-    alias(libs.plugins.kotlinAndroid)
-    alias(libs.plugins.kapt)
-    alias(libs.plugins.ksp)
-    alias(libs.plugins.apollo)
-    alias(libs.plugins.daggerHiltAndroidGradle)
+    id("com.android.application")
+    id("org.jetbrains.kotlin.android")
+    id("org.jetbrains.kotlin.kapt")
+    id("com.google.devtools.ksp")
+    id("com.apollographql.apollo3")
+    id("com.google.dagger.hilt.android")
 }
 
 android {
