--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ hiltComposeNavigation= "1.0.0"
 junit = "4.13.2"
 junitExt = "1.1.5"
 benchmarkMacroJunit = "1.1.1"
-profileInstaller = "1.3.0-rc01"
+profileInstaller = "1.3.0"
 kotlin = "1.7.20"
 kotlinCompilerExtension = "1.3.2"
 kotlinKsp = "1.7.20-1.0.8"
