--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 accompanist = "0.28.0"
-activityCompose = "1.6.1"
+activityCompose = "1.7.1"
 androidGradlePlugin = "8.0.1"
 apollo = "3.7.1"
-composeBom = "2023.01.00"
-coreKtx = "1.9.0"
+composeBom = "2023.05.00"
+composeCompiler = "1.4.2"
+coreKtx = "1.10.0"
 espressoCore = "3.5.1"
 uiAutomator = "2.2.0"
 hilt = "2.44.2"
@@ -12,12 +13,11 @@ hiltComposeNavigation= "1.0.0"
 junit = "4.13.2"
 junitExt = "1.1.5"
 benchmarkMacroJunit = "1.1.1"
-profileInstaller = "1.3.0"
-kotlin = "1.7.20"
-kotlinCompilerExtension = "1.3.2"
-kotlinKsp = "1.7.20-1.0.8"
+profileInstaller = "1.3.1"
+kotlin = "1.8.10"
+kotlinKsp = "1.8.10-1.0.9"
 landscapist = "2.1.0"
-lifecycleRuntimeKtx = "2.5.1"
+lifecycleRuntimeKtx = "2.6.1"
 navigationCompose = "2.5.3"
 room = "2.5.0"
 dataStore = "1.0.0"
