Use Coil directly instead of via Landscapist

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,8 +108,8 @@ dependencies {
     // Apollo
     implementation(libs.apollo.runtime)
 
-    // Landscapist
-    implementation(libs.landscapist.coil)
+    // Coil
+    implementation(libs.coil.compose)
 
     // Benchmark
     implementation(libs.androidx.profile.installer)
