--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ lifecycleRuntimeKtx = "2.8.2"
 navigationCompose = "2.7.7"
 room = "2.6.1"
 dataStore = "1.1.1"
+shapes = "1.0.0-beta01"
 
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -52,6 +53,9 @@ datastore = { module = "androidx.datastore:datastore-preferences", version.ref =
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltComposeNavigation"}
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"}
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt"}
+
+androidx-graphics-shapes = { module = "androidx.graphics:graphics-shapes", version.ref = "shapes"}
+androidx-graphics-shapes-android = { module = "androidx.graphics:graphics-shapes-android", version.ref = "shapes"}
 
 junit = { module = "junit:junit", version.ref = "junit" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "junitExt"}
