--- a/build.gradle
+++ b/build.gradle
@@ -6,4 +6,5 @@ plugins {
     alias(libs.plugins.ksp).apply(false)
     alias(libs.plugins.apollo).apply(false)
     alias(libs.plugins.daggerHiltAndroidGradle).apply(false)
+    alias(libs.plugins.compose.compiler).apply(false)
 }
