--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,22 @@
 [versions]
-accompanist = "0.30.1"
+accompanist = "0.34.0"
 activityCompose = "1.9.0"
-androidGradlePlugin = "8.5.0"
+androidGradlePlugin = "8.5.1"
 apollo = "3.7.1"
 composeBom = "2024.06.00"
-composeCompiler = "1.5.3"
 coreKtx = "1.13.1"
-espressoCore = "3.5.1"
+espressoCore = "3.6.1"
 uiAutomator = "2.3.0"
-hilt = "2.49"
+hilt = "2.51.1"
 hiltComposeNavigation= "1.2.0"
 junit = "4.13.2"
-junitExt = "1.1.5"
+junitExt = "1.2.1"
 benchmarkMacroJunit = "1.2.4"
 profileInstaller = "1.3.1"
-kotlin = "1.9.10"
-kotlinKsp = "1.9.10-1.0.13"
-coil = "2.6.0"
-lifecycleRuntimeKtx = "2.8.2"
+kotlin = "2.0.0"
+kotlinKsp = "2.0.0-1.0.21"
+coil = "2.7.0"
+lifecycleRuntimeKtx = "2.8.3"
 navigationCompose = "2.7.7"
 room = "2.6.1"
 dataStore = "1.1.1"
@@ -79,3 +78,5 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kotlinKsp" }
 apollo = { id = "com.apollographql.apollo3", version.ref = "apollo" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
