--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-activityCompose = "1.9.0"
-androidGradlePlugin = "8.5.1"
+activityCompose = "1.9.1"
+androidGradlePlugin = "8.5.2"
 apollo = "3.7.1"
 composeBom = "2024.06.00"
 coreKtx = "1.13.1"
@@ -15,11 +15,11 @@ profileInstaller = "1.3.1"
 kotlin = "2.0.0"
 kotlinKsp = "2.0.0-1.0.21"
 coil = "2.7.0"
-lifecycleRuntimeKtx = "2.8.3"
+lifecycleRuntimeKtx = "2.8.4"
 navigationCompose = "2.7.7"
 room = "2.6.1"
 dataStore = "1.1.1"
-shapes = "1.0.0-beta01"
+shapes = "1.0.0-rc01"
 materialKolor = "1.7.0"
 
 [libraries]
