--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:name=".PokedexerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/pokeball_launcher"
-        android:label="@string/app_name"
+        android:label="@string/appName"
         android:theme="@style/Theme.Pokedexer"
         >
         <activity
