--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-activityCompose = "1.9.1"
+activityCompose = "1.9.2"
 androidGradlePlugin = "8.5.2"
 apollo = "3.7.1"
-composeBom = "2024.06.00"
+composeBom = "2024.09.00"
 coreKtx = "1.13.1"
 espressoCore = "3.6.1"
 uiAutomator = "2.3.0"
@@ -10,16 +10,16 @@ hilt = "2.51.1"
 hiltComposeNavigation= "1.2.0"
 junit = "4.13.2"
 junitExt = "1.2.1"
-benchmarkMacroJunit = "1.2.4"
+benchmarkMacroJunit = "1.3.0"
 profileInstaller = "1.3.1"
 kotlin = "2.0.0"
 kotlinKsp = "2.0.0-1.0.21"
 coil = "2.7.0"
-lifecycleRuntimeKtx = "2.8.4"
-navigationCompose = "2.7.7"
+lifecycleRuntimeKtx = "2.8.5"
+navigationCompose = "2.8.0"
 room = "2.6.1"
 dataStore = "1.1.1"
-shapes = "1.0.0-rc01"
+shapes = "1.0.1"
 materialKolor = "1.7.0"
 
 [libraries]
@@ -29,7 +29,6 @@ androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtim
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom"}
-androidx-compose-material2 = { module = "androidx.compose.material:material" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui" }
 androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
