Ignore google-services.json for Git and AI

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .gradle
 /local.properties
+google-services.json
 
 # IDEA/Android Studio project files, because
 # the project can be imported from settings.gradle.kts
