--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-activityCompose = "1.9.2"
+activityCompose = "1.10.0"
 androidGradlePlugin = "8.7.2"
-apollo = "3.7.1"
+apollo = "4.0.0-beta.7"
 composeBom = "2024.09.01"
 coreKtx = "1.13.1"
 espressoCore = "3.6.1"
