--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
-activityCompose = "1.10.1"
-androidGradlePlugin = "8.10.0"
-apollo = "3.8.5"
-composeBom = "2025.05.00"
-coreKtx = "1.16.0"
+activityCompose = "1.12.1"
+androidGradlePlugin = "8.13.1"
+apollo = "3.8.6"
+composeBom = "2025.12.00"
+coreKtx = "1.17.0"
 espressoCore = "3.6.1"
 uiAutomator = "2.3.0"
-hilt = "2.56.2"
+hilt = "2.57.2"
 hiltComposeNavigation= "1.2.0"
 junit = "4.13.2"
 junitExt = "1.2.1"
 benchmarkMacroJunit = "1.3.4"
 profileInstaller = "1.4.1"
-kotlin = "2.1.21"
-kotlinKsp = "2.1.21-2.0.1"
+kotlin = "2.2.0"
+kotlinKsp = "2.2.0-2.0.2"
 coil = "2.7.0"
-lifecycleRuntimeKtx = "2.9.0"
-navigationCompose = "2.9.0"
-room = "2.7.1"
-dataStore = "1.1.6"
+lifecycleRuntimeKtx = "2.10.0"
+navigationCompose = "2.9.6"
+room = "2.7.2"
+dataStore = "1.2.0"
 shapes = "1.0.1"
 materialKolor = "2.1.1"
 
@@ -36,6 +36,7 @@ androidx-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-mani
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-compose-ui-util = { module = "androidx.compose.ui:ui-util" }
+androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 
 apollo-runtime = { module = "com.apollographql.apollo3:apollo-runtime", version.ref = "apollo" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
