--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,7 @@ plugins {
     alias(libs.plugins.apollo).apply(false)
     alias(libs.plugins.daggerHiltAndroidGradle).apply(false)
     alias(libs.plugins.compose.compiler).apply(false)
+    alias(libs.plugins.kotlinMultiplatform).apply(false)
+    alias(libs.plugins.androidLibrary).apply(false)
+    alias(libs.plugins.room).apply(false)
 }
