--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ android {
 }
 
 dependencies {
+    // Shared Module
+    implementation(project(":shared"))
+
     // Core
     implementation(libs.androidx.core.ktx)
     implementation(libs.androidx.lifecycle.runtime.ktx)
