--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,8 @@ plugins {
     alias(libs.plugins.androidApplication).apply(false)
     alias(libs.plugins.kotlinAndroid).apply(false)
     alias(libs.plugins.androidTest).apply(false)
-    alias(libs.plugins.kapt).apply(false)
     alias(libs.plugins.ksp).apply(false)
     alias(libs.plugins.apollo).apply(false)
-    alias(libs.plugins.daggerHiltAndroidGradle).apply(false)
     alias(libs.plugins.compose.compiler).apply(false)
+    alias(libs.plugins.metro).apply(false)
 }
