--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,16 +6,15 @@ composeBom = "2025.12.00"
 coreKtx = "1.17.0"
 espressoCore = "3.6.1"
 uiAutomator = "2.3.0"
-hilt = "2.57.2"
-hiltComposeNavigation= "1.2.0"
 junit = "4.13.2"
 junitExt = "1.2.1"
 benchmarkMacroJunit = "1.3.4"
 profileInstaller = "1.4.1"
-kotlin = "2.2.0"
-kotlinKsp = "2.2.0-2.0.2"
+kotlin = "2.2.20"
+kotlinKsp = "2.2.20-2.0.2"
 coil = "2.7.0"
 lifecycleRuntimeKtx = "2.10.0"
+metro = "0.9.2"
 navigationCompose = "2.9.6"
 room = "2.7.2"
 dataStore = "1.2.0"
@@ -47,10 +46,6 @@ room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 
 datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "dataStore" }
 
-androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltComposeNavigation"}
-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"}
-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt"}
-
 androidx-graphics-shapes = { module = "androidx.graphics:graphics-shapes", version.ref = "shapes"}
 androidx-graphics-shapes-android = { module = "androidx.graphics:graphics-shapes-android", version.ref = "shapes"}
 
@@ -63,12 +58,13 @@ androidx-profile-installer = { module = "androidx.profileinstaller:profileinstal
 
 material-kolor = { module = "com.materialkolor:material-kolor", version.ref = "materialKolor"}
 
+metro-runtime = { module = "dev.zacsweers.metro:metro-runtime", version.ref = "metro" }
+
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 androidTest = { id = "com.android.test", version.ref = "androidGradlePlugin" }
-daggerHiltAndroidGradle = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kotlinKsp" }
 apollo = { id = "com.apollographql.apollo3", version.ref = "apollo" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+metro = { id = "dev.zacsweers.metro", version.ref = "metro" }
