--- a/.gitignore
+++ b/.gitignore
@@ -22,13 +22,6 @@ local.properties
 .kotlin/
 
 # iOS
-iosApp/DerivedData/
 iosApp/build/
-*.xcodeproj/xcuserdata/
-*.xcodeproj/project.xcworkspace/
-*.xcworkspace/xcuserdata/
-
-# XcodeGen
-# Uncomment the following lines if you want to ignore the generated Xcode project files
-# iosApp/Pokedexer.xcodeproj
-# iosApp/Pokedexer.xcworkspace
+**/xcuserdata/
+**/DerivedData/
