--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 activityCompose = "1.12.1"
 androidGradlePlugin = "8.13.1"
 apollo = "3.8.6"
-composeBom = "2025.12.00"
+composeBom = "2025.12.01"
 coreKtx = "1.17.0"
 espressoCore = "3.6.1"
 uiAutomator = "2.3.0"
@@ -10,8 +10,8 @@ junit = "4.13.2"
 junitExt = "1.2.1"
 benchmarkMacroJunit = "1.3.4"
 profileInstaller = "1.4.1"
-kotlin = "2.2.20"
-kotlinKsp = "2.2.20-2.0.2"
+kotlin = "2.3.0"
+kotlinKsp = "2.3.2"
 coil = "2.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 metro = "0.9.2"
@@ -39,6 +39,7 @@ androidx-compose-material-icons-extended = { module = "androidx.compose.material
 
 apollo-runtime = { module = "com.apollographql.apollo3:apollo-runtime", version.ref = "apollo" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+coil-gif = { module = "io.coil-kt:coil-gif", version.ref = "coil" }
 
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
@@ -57,8 +58,6 @@ androidx-benchmark-macro = { module = "androidx.benchmark:benchmark-macro-junit4
 androidx-profile-installer = { module = "androidx.profileinstaller:profileinstaller", version.ref = "profileInstaller" }
 
 material-kolor = { module = "com.materialkolor:material-kolor", version.ref = "materialKolor"}
-
-metro-runtime = { module = "dev.zacsweers.metro:metro-runtime", version.ref = "metro" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "androidGradlePlugin" }
