Move all experimental annotation use to Kotlin compiler args

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,17 @@ android {
     }
     kotlinOptions {
         jvmTarget = "17"
+        freeCompilerArgs += [
+            "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi",
+            "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api",
+            "-opt-in=androidx.compose.ui.ExperimentalComposeUiApi",
+            "-opt-in=androidx.compose.animation.ExperimentalSharedTransitionApi",
+            "-opt-in=androidx.compose.layout.ExperimentalLayoutApi",
+            "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi",
+            "-opt-in=kotlinx.coroutines.FlowPreview",
+            "-opt-in=androidx.compose.animation.core.ExperimentalAnimationSpecApi",
+            "-opt-in=androidx.compose.ui.test.ExperimentalTestApi"
+        ]
     }
     buildFeatures {
         compose true
