--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,8 +11,8 @@ junit = "4.13.2"
 junitExt = "1.2.1"
 benchmarkMacroJunit = "1.3.4"
 profileInstaller = "1.4.1"
-kotlin = "2.3.0"
-kotlinKsp = "2.3.2"
+kotlin = "2.2.21"
+kotlinKsp = "2.2.21-2.0.4"
 coil = "2.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 metro = "0.9.2"
@@ -23,6 +23,7 @@ shapes = "1.0.1"
 materialKolor = "2.1.1"
 serialization = "1.8.0"
 navigation3 = "1.0.0"
+skie = "0.10.8"
 sqlite = "2.5.0"
 
 [libraries]
@@ -90,3 +91,4 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 metro = { id = "dev.zacsweers.metro", version.ref = "metro" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 room = { id = "androidx.room", version.ref = "room" }
+skie = { id = "co.touchlab.skie", version.ref = "skie" }
