Apply Circular Std custom font and implement iOS-idiomatic typography
- Integrated Circular Std (Book, Medium, Bold, Black) from the Android project into the iOS app.
- Registered custom fonts in Info.plist and the Xcode project.
- Created AppTypography.swift with a semantic naming system aligned with Apple’s HIG (largeTitle, body, headline, etc.).
- Refined font weights for iOS legibility, reserving Black for hero text and Bold/Medium for headlines and labels.
- Propagated AppTypography across all features (Home, Pokedex, Moves, Items, Type Charts) to replace hardcoded system fonts.
- Adjusted TypeLabel and LoadingView components to use the new unified typographic scale.

--- a/iosApp/PokedexerApp/Info.plist
+++ b/iosApp/PokedexerApp/Info.plist
@@ -68,5 +68,12 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>circularstd_black.ttf</string>
+		<string>circularstd_bold.ttf</string>
+		<string>circularstd_book.ttf</string>
+		<string>circularstd_medium.ttf</string>
+	</array>
 </dict>
 </plist>
